--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "type": "module",
   "description": "Arc Badminton Backend API",
   "main": "dist/index.js",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "tsx src/tests/map-tiles.test.ts",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects unit",
+    "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects integration",
+    "test:security": "node --experimental-vm-modules node_modules/jest/bin/jest.js --selectProjects security",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:ci": "node --experimental-vm-modules node_modules/jest/bin/jest.js --ci --coverage --reporters=default --reporters=jest-junit",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
@@ -27,12 +35,19 @@
     "@prisma/client": "^6.8.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.0.0",
     "http-proxy-middleware": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.10.1",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "prisma": "^6.8.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.0",
     "typescript": "^5.9.3"
   }
